<resources>
    <string name="app_name">Frigidarium</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
   
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_barcode_reader">BarcodeReaderActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="scan">Scan</string>
    <string name="stock">Stock</string>
    <string name="shoppingList">Shopping list</string>
    <string name="settings">Settings</string>
    <string name="listPicker">List picker</string>

    <string name="defaultLogin">Frigidarium</string>
    <string name="defaultEmail">frigidarium@frigidarium.com</string>

    <string name="addedSuccesful">Product added successful</string>

    <string name="new_product_message">This product has not yet been registered, please fill in the following fields to help expand the Frigidarium database:</string>
    <string name="product_name_hint">product name (without brandname)</string>
    <string name="brand_name_hint">brand name</string>
    <string name="content_hint">content</string>
    <string name="url_hint">url</string>
    <string name="submit">submit + add to stock</string>
    <string name="liter">L</string>
    <string name="gram">g</string>
    <string name="cancel">Cancel</string>
    <string name="cont">Continue</string>
    <string name="add">Add</string>
    <string name="dialog_switch_list">Add user %1$s to your stock?</string>
    <string name="dialog_add_to_stock">Add %1$s to stock?</string>
    <string name="product_succes">%1$s added succesfully.</string>
    <string name="dialog_add_to_stock_does_not_exist">This product has not yet been added to the Frigidarium database. Do you want to register this product and add it to stock?</string>
    <string name="dialog_add_title">Add product to stock</string>
    <string name="date_hint">Expiration date (dd-mm-yyyy) (optional)</string>
    <string name="date_toast">To add a expiring date follow the format: dd-mm-yy</string>
    <string name="date_invalid">The added date is invalid</string>
    <string name="on_current_list">"You are already part of this list."</string>
    <string name="share_button">Share your personal QR-code</string>
    <string name="login_text">Welcome to Frigidarium!</string>
    <string name="opVooraad">"In stock: "</string>
    <string name="inShoppingCart">"In shopping cart: "</string>
    <string name="expirationDate">"Expiration date: "</string>
    <string name="not_all_field_filled_in">Not all required fields are filled</string>
    <string name="add_without_date">Add without date</string>
    <string name="brand">Brand</string>
    <string name="productname">Productname</string>
    <string name="property">An important property</string>
    <string name="barcode">"Barcode: "</string>
    <string name="stap_uit_de_lijst">Leave list</string>
    <string name="huidige_lijst">Current list</string>
    <string-array name="content_units">
        <item>g</item>
        <item>kg</item>
        <item>pieces</item>
        <item>L</item>
        <item>mL</item>


    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Dutch</item>
        <item>German</item>
    </string-array>
    <string name="select_lang">Choose a language</string>
    <string name="spinner_prompt">Choose a language</string>
    <string name="login_text2">Please use your google account to log in</string>
    <string name="banner_ad_unit_id">"ca-app-pub-3940256099942544/6300978111"</string>
</resources>

